app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

#body
{
	margin:-10px auto;
	background-color: #E8EEEF;
	color:#FFF;

	a
	{
		text-decoration: none;
	}

	a:hover
	{
		background: none;
	  color:#1594DD;
	  cursor: pointer; 
		cursor: hand
	}

	#head
	{
		margin:0px auto;
		height:200px;
		color:#FFF;
		background: -webkit-gradient(linear,left top,left bottom,	color-stop(0, #EBF7F6),	color-stop(1, #CBD8DA));
		background: -o-linear-gradient(bottom, #EBF7F6 0%, #CBD8DA 100%);
		background: -moz-linear-gradient(bottom, #EBF7F6 0%, #CBD8DA 100%);
		background: -webkit-linear-gradient(bottom, #EBF7F6 0%, #CBD8DA 100%);
		background: -ms-linear-gradient(bottom, #EBF7F6 0%, #CBD8DA 100%);
		background: linear-gradient(to bottom, #EBF7F6 0%, #CBD8DA 100%);

		nav
		{
			margin:10px auto;
			border-top: 5px solid #1594DD;
			width:900px;

			ul
			{
				margin-left: 275px;
				list-style: none;
				color:#000;

				li
				{
					padding-top:10px;
					height:25px;
					display:inline-block;
					padding-left:10px;
					padding-right:10px;
					font-size:14px;
				}
				.active
				{
					background-color:#1594DD;
					color:#FFF;
					border-radius:20px 20px 10px 10px; 
				}
				.nav_right
				{
					float:right;
				}		
			}
			h2
			{
				text-align: left;
				padding-top:15px;
				margin-left:25px;
				font-family:'GoodDog' Arial Sans-serif;
				font-size:45px;
			}
			p
			{
				color:#5e6469;
			}

			.login
			{
				float:right;
				margin-top:-10px;
				margin-right:5px;
				clear:both;

				a:hover
				{
					color:#1594DD;
					cursor: pointer; 
					cursor: hand;
				}
			}
			.signed_in_welcome
			{
				color:#000;
				float:right;
				margin-top:-35px;
				margin-right:5px;
			}
			.search
			{				
				margin-left:305px;
				color:#000;				
				
				input
				{
          text-align: center;
          font-family: 'data';
          font-size:20px;
          font-weight: bold;
				}
			}
		}
	}
	#container
	{
		margin:15px auto;
		width:900px;
		color: #000;

		h4
		{
			font-weight: bold;
		}
	}
	.alert
	{
		margin-top:75px;
		text-align: center;
		color:#000;
	}
	.alert-danger
	{
		color:#FF0000;
	}
	footer
	{
		padding-top:75px;
		clear:both;
	}

	.nav_footer
	{
		list-style: none;
		text-align: center;

		li
		{
			display: inline-block;
		}
	}
}

